--- a/index.html
+++ b/index.html
@@ -103,10 +103,44 @@
                 <a href="features.html" class="btn btn-dark">Read More</a>
             </div>
             <img src="images/cloud.png" alt="">
-
         </div>
-
     </section>
     
+    <!-- Languages -->
+    <section class="languages">
+        <h2 class="md text-center my-2">
+            Supported Languages
+        </h2>
+        <div class="container flex">
+            <div class="card">
+                <h4>Node.js</h4>
+                <img src="images/Logos/node.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Python</h4>
+                <img src="images/Logos/python.png" alt="">
+            </div>
+            <div class="card">
+                <h4>C#</h4>
+                <img src="images/Logos/csharp.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Ruby</h4>
+                <img src="images/Logos/ruby.png" alt="">
+            </div>
+            <div class="card">
+                <h4>PHP</h4>
+                <img src="images/Logos/php.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Scala</h4>
+                <img src="images/Logos/scala.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Clojure</h4>
+                <img src="images/Logos/clojure.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
