--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="Css/utilities.css">
     <link rel="stylesheet" href="Css/style.css">
-    <title>Loruki | Cloud Hosting For Everyone</title>
+    <title>CloudGate | Cloud Hosting For Everyone</title>
 </head>
 <body>
     <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">Loruki.</h1>
+            <h1 class="logo">CloudGate.</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -147,7 +147,7 @@
     <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
             <div>
-                <h1>Loruki.</h1>
+                <h1>CloudGate.</h1>
                 <p>Copyright &copy; 2022</p>
             </div>
             <nav>
