Ended features.html - Starting docs.html

--- a/features.html
+++ b/features.html
@@ -26,6 +26,60 @@
 
     </div>
 
+    <!-- Head -->
+    <section class="features-head bg-primary py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="xl">Features</h1>
+                <p class="lead"> 
+                    Check out the Features of Cloudgate that separates us from the competition
+                </p>
+            </div>
+            <img src="images/server.png" alt="">
+        </div>
+    </section>
+
+    <!-- Sub head -->
+    <section class="features-sub-head bg-light py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">The CloudGate Platform</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero doloribus repellendus quasi et repudiandae ipsa tempore voluptate enim? Labore quo ut ipsum beatae distinctio aspernatur sunt. Earum nesciunt veritatis tenetur.
+                </p>
+            </div>
+            <img src="images/server2.png" alt="">
+        </div>
+    </section>
+    
+    <div class="section features-main my-2">
+        <div class="container grid grid-3">
+            <div class="card flex">
+                <i class="fas fa-server fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus a quidem hic doloribus deleniti autem, maiores veritatis cupiditate eos animi ut expedita explicabo. Porro magnam facere aperiam consectetur debitis perferendis!</p>
+            </div>
+            <div class="card flex">
+                <i class="fas fa-laptop-code fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore rem repudiandae voluptates laborum beatae? Necessitatibus veniam corporis ex molestiae? Fuga voluptatem esse recusandae ipsa odit harum ut quia, nobis debitis?</p>
+            </div>
+            <div class="card flex">
+                <i class="fas fa-database fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus officiis quod, nemo soluta fugiat dignissimos quam eum cupiditate dolorum quae porro aliquid, magnam illo, voluptatibus deleniti expedita odit in sunt?</p>
+            </div>
+            <div class="card flex">
+                <i class="fas fa-power-off fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et minima reprehenderit placeat laborum distinctio eum voluptates dicta vero commodi. Eaque quam at odit perspiciatis quibusdam fugit aut, veritatis expedita est.</p>
+            </div>
+            <div class="card flex">
+                <i class="fas fa-network-wired fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dignissimos dolores quam qui velit ipsam fugiat accusantium officia cumque ea, molestiae voluptas amet consequuntur atque corrupti perferendis facere eligendi voluptatibus.</p>
+            </div>
+            <div class="card flex">
+                <i class="fas fa-upload fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non nulla itaque expedita eos delectus velit fugit numquam dignissimos provident quam, doloribus minus voluptates vero facilis ipsa cum, mollitia eligendi molestias?</p>
+            </div>
+        </div>
+    </div>
     <!-- Footer -->
     <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
